deployments/k8s/overlays/homelab/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nimbus
  namespace: nimbus-system
$patch: delete
